Fixed screen being over one view width on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,11 @@
     background-size: cover;
     background-attachment: fixed;
   }
+
+  html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
 }
 
 @layer components {
